--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.12",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5"
+  },
+  "devDependencies": {
+    "dotenv": "^10.0.0"
   }
 }
