--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "client-sessions": "^0.8.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "mongoose": "^5.13.5",
     "multer": "^1.4.2",
     "nodemon": "^2.0.12",
     "pg": "^8.6.0",
